fix: primary and surrogate keys, deduplication in staging models; feat: add singular, generic tests and store failures

--- a/models/staging/ecommerce/stg_ecommerce__geolocations.yml
+++ b/models/staging/ecommerce/stg_ecommerce__geolocations.yml
@@ -5,6 +5,10 @@ models:
   - name: stg_ecommerce__geolocations
     description: "Geolocation data at staging phase"
     columns:
+      - name: geolocation_sk
+        tests:
+          - not_null
+          - unique
       - name: geolocation_zip_code_prefix
       - name: geolocation_lat
       - name: geolocation_lng
