--- a/models/staging/ecommerce/stg_ecommerce__geolocations.yml
+++ b/models/staging/ecommerce/stg_ecommerce__geolocations.yml
@@ -1,7 +1,7 @@
-
 version: 2
 
 models:
+
   - name: stg_ecommerce__geolocations
     description: "Geolocation data at staging phase"
     columns:
@@ -10,7 +10,7 @@ models:
           - not_null
           - unique
       - name: geolocation_zip_code_prefix
-      - name: geolocation_lat
-      - name: geolocation_lng
+      - name: geolocation_lattitude
+      - name: geolocation_longitude
       - name: geolocation_city
       - name: geolocation_state
